[tool.poetry]
name = "beancount-parser"
version = "0.1.0"
description = ""
authors = ["Fang-Pen Lin <fangpen@launchplatform.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
lark = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
