[tool.poetry]
name = "beancount-parser"
version = "0.1.7"
description = "Standalone Lark based Beancount syntax parser (not relying on Beancount library), MIT license"
authors = ["Fang-Pen Lin <fangpen@launchplatform.com>"]
license = "MIT"
repository = "https://github.com/LaunchPlatform/beancount-parser"

[tool.poetry.dependencies]
python = "^3.9"
lark = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
